--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.text.Font?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Main">
    <children>
       <StackPane prefHeight="50.0" prefWidth="200.0">
          <children>
-            <Label prefHeight="17.0" prefWidth="293.0">
+            <Label fx:id="result" prefHeight="17.0" prefWidth="293.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -111,4 +111,4 @@
          </children>
       </HBox>
    </children>
-</VBox>
+</fx:root>
